syntax = "proto3";

package Yahtzee;
option java_package = "Yahtzee.service";


// service AuthenticateService {
//   rpc getUser(Username) returns (User);
//   rpc createUser(User) returns (Username);
//   rpc getPassword(Username) returns (Password);
//   rpc setPassword(Password) returns (Username);
// }

service serveClient { 
    rpc createUser(User) returns (Username);
    rpc setPassword(Password) returns (Valid);
    rpc verifyPassword(Password) returns (Valid);
    rpc getScore(Username) returns (Score);
    rpc setLastScore(Score) returns (Username);
}

message Username{
  string username = 1;
  bool exists = 2;
}

message User {
    string username = 1;
    string password = 2;
    int32 lastScore = 3;
    int32 highScore = 4;
    bool exists =5;
    string name = 6;
    string lastName = 7;
    string email = 8;
  }


message Password{
    string username = 1;
    string password = 2;
    string salt = 3;
    bool exists = 4;
    string newPassword = 5;
}


message Valid{
  string username = 1;
  bool exists = 2;
  bool valid = 3;
}

    
message Score{
    string username = 1;
    int32 lastScore = 2;
    int32 highScore = 3;
    bool exists = 4;
  }
  
  message EmptyRequest {}



